添加更新chart功能
